crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@257.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_spgist where ir = int4range(10,20);"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..38
    Ident@21..38 "test_range_spgist"
  Whitespace@38..39 " "
  Where@39..44 "where"
  Whitespace@44..45 " "
  AExpr@45..65
    ColumnRef@45..47
      Ident@45..47 "ir"
    Whitespace@47..48 " "
    Ascii61@48..49 "="
    Whitespace@49..50 " "
    FuncCall@50..65
      Ident@50..59 "int4range"
      Ascii40@59..60 "("
      AConst@60..62
        Iconst@60..62 "10"
      Ascii44@62..63 ","
      AConst@63..65
        Iconst@63..65 "20"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

