crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@278.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_spgist where ir &> int4range(100,500);"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..38
    Ident@21..38 "test_range_spgist"
  Whitespace@38..39 " "
  Where@39..44 "where"
  Whitespace@44..45 " "
  AExpr@45..68
    ColumnRef@45..47
      Ident@45..47 "ir"
    Whitespace@47..48 " "
    Op@48..50 "&>"
    Whitespace@50..51 " "
    FuncCall@51..68
      Ident@51..60 "int4range"
      Ascii40@60..61 "("
      AConst@61..64
        Iconst@61..64 "100"
      Ascii44@64..65 ","
      AConst@65..68
        Iconst@65..68 "500"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

